--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_USER=mertanimysql
-DB_PASSWORD=mertanipass0!
-DB_HOST=103.193.176.18
-DB_PORT=3306
-DB_NAME=mertanimysql
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_NAME=
